--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -1,7 +1,11 @@
 {
     "config": {
-        "MD013": false,        // line length
-        "MD033": false,        // inline HTML (utile dans certains docs)
-        "MD041": false         // first line heading (pas toujours pertinent)
-    }
+        "MD013": false, // line length
+        "MD033": false, // inline HTML (utile dans certains docs)
+        "MD041": false, // first line heading (pas toujours pertinent)
+        "MD022": false, // headings should be surrounded by blank lines
+        "MD032": false, // lists should be surrounded by blank lines
+        "MD031": false, // fenced code blocks should be surrounded by blank lines
+        "MD036": false, // emphasis used instead of a heading
+    },
 }
